fix: non-subscription orders
